fixed ui spacing for firefox

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -18,7 +18,7 @@
 
 .wire-frame {
 	border: 1px solid #aed0ea;
-	width: 550px;
+	width: 560px;
 	padding: 10px;
 }
 
